FIX: Search fields not aligned in responsive mode [t14353]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10381 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -407,6 +407,14 @@
     .LoginBoxPanel {
         margin-top:8px;  
     }
+    /* Metadata fields */
+    .SearchItem .SearchWidth, .SearchItem .SearchWidthHalf {
+        float: right;
+        margin-left: 4px;
+    }
+    #searchspace .SearchItem {
+        clear: right;
+    }
 
 }
 @media(max-width:600px) {
